--- a/Products.css
+++ b/Products.css
@@ -593,22 +593,21 @@
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 20px 30px;
+  padding: 20px 27px;
 }
 
 .u-section-4 .u-image-1 {
   height: 400px;
-  margin-top: 20px;
-  margin-bottom: 0;
+  margin: 20px 3px 0;
 }
 
 .u-section-4 .u-text-1 {
   font-weight: 700;
-  margin: 13px auto 0 11px;
+  margin: 13px auto 0 14px;
 }
 
 .u-section-4 .u-text-2 {
-  margin: 7px 0 0;
+  margin: 10px 0 0 7px;
 }
 
 .u-section-4 .u-btn-1 {
@@ -618,27 +617,26 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 17px auto 0 3px;
   padding: 2px 11px 3px 10px;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 20px 30px;
+  padding: 20px 27px;
 }
 
 .u-section-4 .u-image-2 {
   height: 400px;
-  margin-top: 20px;
-  margin-bottom: 0;
+  margin: 20px 3px 0;
 }
 
 .u-section-4 .u-text-3 {
   font-weight: 700;
-  margin: 13px auto 0 11px;
+  margin: 13px auto 0 14px;
 }
 
 .u-section-4 .u-text-4 {
-  margin: 7px 0 0;
+  margin: 10px 0 0 7px;
 }
 
 .u-section-4 .u-btn-2 {
@@ -648,27 +646,26 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 17px auto 0 3px;
   padding: 2px 11px 3px 10px;
 }
 
 .u-section-4 .u-container-layout-3 {
-  padding: 20px 30px;
+  padding: 20px 27px;
 }
 
 .u-section-4 .u-image-3 {
   height: 400px;
-  margin-top: 20px;
-  margin-bottom: 0;
+  margin: 20px 3px 0;
 }
 
 .u-section-4 .u-text-5 {
   font-weight: 700;
-  margin: 13px auto 0 11px;
+  margin: 13px auto 0 14px;
 }
 
 .u-section-4 .u-text-6 {
-  margin: 7px 0 0;
+  margin: 10px 0 0 7px;
 }
 
 .u-section-4 .u-btn-3 {
@@ -678,7 +675,7 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 17px auto 0 3px;
   padding: 2px 11px 3px 10px;
 }
 
@@ -695,14 +692,44 @@
 
   .u-section-4 .u-image-1 {
     height: 316px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-left: 0;
   }
 
   .u-section-4 .u-image-2 {
     height: 316px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-btn-2 {
+    margin-left: 0;
   }
 
   .u-section-4 .u-image-3 {
     height: 316px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-btn-3 {
+    margin-left: 0;
   }
 }
 
@@ -714,14 +741,20 @@
 
   .u-section-4 .u-image-1 {
     height: 374px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-image-2 {
     height: 374px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-image-3 {
     height: 374px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
@@ -737,6 +770,8 @@
 
   .u-section-4 .u-image-1 {
     height: 648px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-container-layout-2 {
@@ -746,6 +781,8 @@
 
   .u-section-4 .u-image-2 {
     height: 648px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-container-layout-3 {
@@ -755,19 +792,27 @@
 
   .u-section-4 .u-image-3 {
     height: 648px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-image-1 {
     height: 399px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-image-2 {
     height: 399px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-image-3 {
     height: 399px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
